# quark

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/demo/: demo.c
include/denovo/: dn_allocator.h  dn_arena_allocator.h  dn_types.h
include/quark/: qrk_allocator.h  qrk_arena_allocator.h  qrk_types.h
src/: dn_allocator.c  dn_arena_allocator.c  qrk_allocator.c  qrk_arena_allocator.c
